SubBt/force-app/main/default/objects/Time_Cards__c/Time_Cards__c.object-meta.xml
<CustomObject>
    <label>Time Card</label>
    <nameField>
        <displayFormat>TC# {0000000}</displayFormat>
        <label>Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>