SubBt/force-app/main/default/objects/Time_Cards__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>