SubBt/force-app/main/default/objects/Time_Cards__c/fields/Daily_Expense__c.field-meta.xml
<CustomField>
    <fullName>Daily_Expense__c</fullName>
    <formula>/*(buildertek__Hours_Worked__c *  buildertek__Regular_Hourly_Rate__c) + (buildertek__Overtime_Hours_Worked__c *  buildertek__Overtime_Hourly_Rate__c)*/

( Standard_Expense__c +   Overtime_Expense__c +  Overtime_Weekly_Hours__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>