SubBt/force-app/main/default/objects/Time_Cards__c/fields/End_Time2__c.field-meta.xml
<CustomField>
    <fullName>End_Time2__c</fullName>
    <formula>End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>