SubBt/force-app/main/default/objects/Time_Cards__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time (Manual)</label>
    <type>DateTime</type>
</CustomField>