SubBt/force-app/main/default/objects/Time_Cards__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <formula>((( End_Time__c -  Start_Time__c) - IF(ISNULL(Lunch_In__c  - Lunch_Out__c),0,(Lunch_In__c  - Lunch_Out__c))) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Clocked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>