SubBt/force-app/main/default/objects/Time_Cards__c/fields/Lunch_In__c.field-meta.xml
<CustomField>
    <fullName>Lunch_In__c</fullName>
    <label>Lunch In</label>
    <type>DateTime</type>
</CustomField>