SubBt/force-app/main/default/objects/Time_Cards__c/fields/Lunch_Out__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Out__c</fullName>
    <label>Lunch Out</label>
    <type>DateTime</type>
</CustomField>