SubBt/force-app/main/default/objects/Time_Cards__c/fields/Old_Regular_Hourly_Rate2__c.field-meta.xml
<CustomField>
    <fullName>Old_Regular_Hourly_Rate2__c</fullName>
    <formula>Old_Regular_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Regular Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>