SubBt/force-app/main/default/objects/Time_Cards__c/fields/Old_Weekly_Overtime_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Old_Weekly_Overtime_Hourly_Rate__c</fullName>
    <label>Old Weekly Overtime Hourly Rate (Auto)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>