SubBt/force-app/main/default/objects/Time_Cards__c/fields/Overtime_Expense__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Expense__c</fullName>
    <formula>Overtime_Hourly_Rate__c  *  Overtime_Hours_Worked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>