SubBt/force-app/main/default/objects/Time_Cards__c/fields/Overtime_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours_Worked__c</fullName>
    <formula>/*IF(buildertek__Weekly_OverTime_Hours_Worked__c &gt; 0,0,( IF((buildertek__Resource__r.buildertek__Daily_Over_Time_Threshold__c &gt; 0),
(IF(( buildertek__Hours_Worked__c &gt;  buildertek__Resource__r.buildertek__Daily_Over_Time_Threshold__c), (buildertek__Hours_Worked__c -  buildertek__Resource__r.buildertek__Daily_Over_Time_Threshold__c),0)),0)))*/

IF((Resource__r.Daily_Over_Time_Threshold__c &gt; 0),
(IF(( Hours_Worked__c &gt;  Resource__r.Daily_Over_Time_Threshold__c), (Hours_Worked__c -  Resource__r.Daily_Over_Time_Threshold__c),0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>