SubBt/force-app/main/default/objects/Time_Cards__c/fields/Overtime_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Weekly_Hours__c</fullName>
    <formula>(Weekly_OverTime_Hours_Worked__c *  Resource__r.Hourly_Rate__c )*  (1+ Resource__r.Weekly_Overtime_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Overtime Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>