SubBt/force-app/main/default/objects/Time_Cards__c/fields/Project_Changed__c.field-meta.xml
<CustomField>
    <fullName>Project_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Changed</label>
    <type>Checkbox</type>
</CustomField>