SubBt/force-app/main/default/objects/Time_Cards__c/fields/Regular_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Regular_Hours_Worked__c</fullName>
    <formula>/*IF(buildertek__Weekly_OverTime_Hours_Worked__c &gt; 0,0,((buildertek__Hours_Worked__c - buildertek__Overtime_Hours_Worked__c) -  buildertek__Total_Break_Time__c))*/
/*(buildertek__Hours_Worked__c - buildertek__Overtime_Hours_Worked__c) -  buildertek__Total_Break_Time__c*/

IF(Weekly_OT__c &gt; 0,((Hours_Worked__c - Weekly_OT__c)),(Hours_Worked__c - Overtime_Hours_Worked__c) -  Total_Break_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>