SubBt/force-app/main/default/objects/Time_Cards__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Cards</relationshipLabel>
    <relationshipName>Time_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>