SubBt/force-app/main/default/objects/Time_Cards__c/fields/Standard_Expense__c.field-meta.xml
<CustomField>
    <fullName>Standard_Expense__c</fullName>
    <formula>Regular_Hourly_Rate__c *   Regular_Hours_Worked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>