SubBt/force-app/main/default/objects/Time_Cards__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <label>Start Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>