SubBt/force-app/main/default/objects/Time_Cards__c/fields/Start_Time2__c.field-meta.xml
<CustomField>
    <fullName>Start_Time2__c</fullName>
    <formula>Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>