SubBt/force-app/main/default/objects/Time_Cards__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time (Manual)</label>
    <type>DateTime</type>
</CustomField>