SubBt/force-app/main/default/objects/Time_Cards__c/fields/Time_Card_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Name_Formula__c</fullName>
    <formula>Resource__r.FirstName + &quot; &quot; +  Resource__r.LastName + &apos;: &apos; + TEXT(Entry_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Card Name</label>
    <type>Text</type>
</CustomField>