SubBt/force-app/main/default/objects/Time_Cards__c/fields/Total_Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Time__c</fullName>
    <label>Total Break Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>