SubBt/force-app/main/default/objects/Time_Cards__c/fields/Weekly_OT__c.field-meta.xml
<CustomField>
    <fullName>Weekly_OT__c</fullName>
    <label>Weekly OT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>