SubBt/force-app/main/default/objects/Time_Cards__c/fields/Weekly_Overtime_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Overtime_Hourly_Rate__c</fullName>
    <formula>(1 + Resource__r.Weekly_Overtime_Premium__c) * Resource__r.Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Overtime Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>