SubBt/force-app/main/default/objects/Time_Cards__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Project__c</columns>
    <columns>Start_Time2__c</columns>
    <columns>Daily_Expense__c</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Regular_Hours_Worked__c</columns>
    <columns>Regular_Hourly_Rate__c</columns>
    <columns>Standard_Expense__c</columns>
    <columns>Overtime_Hours_Worked__c</columns>
    <columns>Overtime_Hourly_Rate__c</columns>
    <columns>Overtime_Expense__c</columns>
    <columns>Weekly_OverTime_Hours_Worked__c</columns>
    <columns>Weekly_Overtime_Hourly_Rate__c</columns>
    <columns>Overtime_Weekly_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>